# quest3-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  MCP_GUIDE.md  README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: f2bb1c2374bd_initial_schema_baseline.py
app/: __init__.py  config.py  container.py  main.py
app/api/: a2a.py  agents.py  chat.py  collaborations.py  deps.py  mcp.py  mcp_servers.py  memory.py  sandbox.py  sessions.py  settings.py  skills.py  tools.py  users.py
app/core/: decision.py  exceptions.py  execution.py  logging.py  react_cot_executor.py  react_executor.py  security.py  strategy_router.py  thinking_while_doing_executor.py  tool_manager.py
app/database/: connection.py  mcp_schema.py  repositories.py  settings_schema.py  skill_repository.py
app/models/: __init__.py  a2a.py  agent.py  agent_memory.py  chat.py  collaboration.py  memory.py  session.py  skill.py
app/sandboxes/: __init__.py  base.py  chinese_chess.py  registry.py  werewolf.py
app/services/: a2a_adapter.py  agent_memory_service.py  agent_registry.py  agent_service.py  cleanup_service.py  collaboration_engine.py  collaboration_service.py  conversation_context.py  llm_service.py  llmated_service.py  mcp_pool.py  mcp_service.py  memory_service.py  planning_chat_service.py  reasoning_strategy.py  session_working_memory.py  settings_service.py  thinking_chain_manager.py  user_service.py  vector_service.py
app/skills/: __init__.py  dependencies.py  executor.py  file_manager.py  (+6 more)
doc/: AGENT_MEMORY_DESIGN.md  AGENT_SKILL_USAGE.md  ENTERPRISE_REFACTOR_DESIGN.md  IMPLEMENTATION_SUMMARY.md  REACT_ARCHITECTURE_DESIGN.md  REACT_IMPLEMENTATION_SUMMARY.md  REFACTOR_TOOL_MANAGEMENT.md  SKILL_SYSTEM_DESIGN.md  TOOL_DESIGN.md  agent-execution-flow.md  api-spec.md  architecture.md  deep_thinking_usage.md  learning-guide.md
docs/: DEEP_THINKING_SETUP.md  deep_thinking_redesign.md
static/: agent_manager.html  app.js  collaboration_editor.html  collaboration_playground.html  execution-handler.js  execution-styles.css  h5.html  index.html  login.html  mcp_manager.html  settings.html  skill_editor.html  skill_manager.html  test.html
tests/: conftest.py  test_auth.py  test_db.py  test_exceptions.py  test_health.py  test_sessions.py  test_user_service.py  test_vector.py  test_werewolf.py
(+59 files in other folders)
