[project]
name = "quest3-agent"
version = "0.1.0"
description = "AI智能体聊天应用，支持多轮对话和长短期记忆"
requires-python = ">=3.12"
dependencies = [
    # Web框架
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    # 智能体框架
    "langchain>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langchain-community>=0.0.10",
    # LLM提供商
    "anthropic>=0.18.0",
    "volcengine-python-sdk[ark]>=1.0.0",
    # 记忆和存储
    "chromadb>=0.4.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    # 工具库
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "asyncio>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "tests*"]
namespaces = false
