[project]
name = "quest3-agent"
version = "0.1.0"
description = "多智能体协作平台，支持多种协作模式、MCP工具集成、技能系统和深度思考"
requires-python = ">=3.12"
dependencies = [
    # Web框架
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    # LLM提供商
    "volcengine-python-sdk[ark]>=1.0.0",
    "openai>=1.0.0",
    # 记忆和存储
    "chromadb>=0.4.0",
    "aiosqlite>=0.19.0",
    # 工具库
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "python-json-logger>=2.0.0",
    # 安全
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "slowapi>=0.1.9",
    # 数据库
    "alembic>=1.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
]
factor-test = [
    "akshare>=1.14.0",
    "scipy>=1.11.0",
]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "tests*"]
namespaces = false
